--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,3 +1,4 @@
 - provide(:title, 'Sign up')
-h1 Users#new Sign_up
-p Find me in app/views/users/new.html.slim
+h1 Users#new-Sign_up
+
+= render 'form'
