--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -5,6 +5,6 @@ footer.footer
 	nav
 		ul
 			li = link_to "About",   static_pages_about_path
-			li = link_to "Contact", '#'
+			li = link_to "Contact", static_pages_contact_path
 			li 
 				a href="http://news.railstutorial.org/" News
